--- a/css/style.css
+++ b/css/style.css
@@ -143,13 +143,85 @@ body {
 }
 
 body {
-  display: flex;
-  flex-direction: row-reverse;
-  font-family: 'harry_pregular';
+  filter:blur(20px);
+  animation: smoke 2s linear forwards;
 }
 
 canvas {
-  background: white;
   display: none;
+  position: relative;
+  z-index: 1;
+  background: linear-gradient(-45deg, #2c003e, #41aaa8, #51dacf, #d2fafb);
+  background-size: 400% 400%;
+  animation: gradientBackground 40s ease infinite;
 }
+
+@keyframes gradientBackground {
+	0% {
+		background-position: 0% 35%;
+	}
+	35% {
+		background-position: 65% 35%;
+	}
+	65% {
+		background-position: 100% 65%;
+  }
+  
+  100% {
+    background-position: 0% 35%;
+  }
+}
+
+
+
+.previo-image{
+  width: 100%;
+  height: 100%;
+
+}
+
+.button-start{
+  position: absolute;
+  bottom: 16%;
+  right: calc(50% - 285px);
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+  font-size: 25px;
+  color: #FFF;
+  background: #000;
+  border:2px solid #d9a000;
+  font-family: 'harry_pregular';
+  line-height: 49px;
+  filter:blur(0px);
+}
+
+.button-start:hover{
+  animation: smoke2 2s linear forwards;
+}
+
+@keyframes smoke {
+  0% {
+      opacity: 0;
+      filter:blur(20px);
+  }
+  100% {
+      opacity: 1;
+      filter:blur(0px);
+  }
+}
+
+
+@keyframes smoke2 {
+  0% {
+      opacity: 1;
+      filter:blur(0px);
+  }
+  100% {
+      opacity: 0;
+      filter:blur(20px);
+  }
+}
+
+
 
