--- a/css/style.css
+++ b/css/style.css
@@ -160,13 +160,17 @@ canvas {
 	0% {
 		background-position: 0% 35%;
 	}
-	35% {
+	25% {
 		background-position: 65% 35%;
 	}
-	65% {
+	50% {
 		background-position: 100% 65%;
   }
   
+  75% {
+    background-position: 0% 100%;
+  }
+
   100% {
     background-position: 0% 35%;
   }
